Fixed max height calculation on mobile

--- a/src/components/NavBar/HorizontalNavBar/NavMenu/styles.less
+++ b/src/components/NavBar/HorizontalNavBar/NavMenu/styles.less
@@ -113,5 +113,9 @@
 @media only screen and (max-width: @minimum) {
     .nav-menu-container {
         max-height: calc(100vh - var(--horizontal-nav-bar-size) - var(--vertical-nav-bar-size) - 1rem);
+
+        &.with-warning {
+            max-height: calc(100vh - var(--horizontal-nav-bar-size) - var(--vertical-nav-bar-size) - 8.5rem);
+        }
     }
 }
